--- a/index.html
+++ b/index.html
@@ -18,61 +18,101 @@
     <link rel="stylesheet" href="css/index.css" />
     <!-- Font-awesome CSS-->
     <link rel="stylesheet" href="css/all.css" />
+    <!--Google fonts-->
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400&display=swap" rel="stylesheet">
   </head>
   <body class="container-fluid">
     <main>
       <!--Head of the page-->
-      <div class="beginning">
-        <a href="#">News</a>
-        <a href="#">Intranet</a>
+      <div class="dropdown beginning">
+        <a class="link" href="#">News</a>
+        <a class="link" href="#">Intranet</a>
+        <button
+          class="btn btn-light dropdown-toggle ddown"
+          type="button"
+          id="dropdownMenuButton"
+          data-toggle="dropdown"
+          aria-haspopup="true"
+          aria-expanded="false"
+        >
+          In English
+        </button>
+        <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+          <a class="dropdown-item" href="#">Suomeksi</a>
+          <a class="dropdown-item" href="#">På Svenska</a>
+        </div>
       </div>
       <!--Navigation-->
-      <div class="col-12">
-         <nav class="navbar navbar-expand-lg navbar-light bg-white">
-            <!--Logo first-->
-            <img
+      <nav class="navbar navbar-expand-lg navbar-light bg-white">
+        <div class="container-fluid">
+          <a class="navbar-left logo" href="#"
+            ><img
               class="logo"
               src="img/liana-technologies-logo-2018.png"
               alt="logo"
-            />
-            <div class="container-fluid">
-              <button
-                class="navbar-toggler"
-                type="button"
-                data-bs-toggle="collapse"
-                data-bs-target="#navbarSupportedContent"
-                aria-controls="navbarSupportedContent"
-                aria-expanded="false"
-                aria-label="Toggle navigation"
-              >
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                  <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#"
-                      >Company</a
-                    >
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">Products</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">Contact us</a>
-                  </li>
-                </ul>
-                <form class="d-flex searchbar">
-                  <input
-                    class="form-control me-2"
-                    type="search"
-                    placeholder="Search"
-                    aria-label="Search"
-                  />
-                  <button class="btn search" type="submit">Search</button>
-                </form>
-              </div>
+          /></a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-toggle="collapse"
+            data-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <!--In order to show side by side, row and col here-->
+          <div class="collapse navbar-collapse row" id="navbarSupportedContent">
+            <div class="col">
+              <ul class="navbar-nav">
+                <li class="nav-item active">
+                  <a class="nav-link" href="#"
+                    >Company <span class="sr-only">(current)</span></a
+                  >
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Products</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Contact us</a>
+                </li>
+              </ul>
             </div>
-          </nav>
+            <div class="col">
+              <form class="d-flex my-2 my-lg-0 floater">
+                <input
+                  class="form-control box mr-sm-2"
+                  type="search"
+                  placeholder="Search"
+                  aria-label="Search"
+                />
+                <button
+                  class="btn buttons text-end my-2 my-sm-0"
+                  type="submit"
+                >
+                  Search
+                </button>
+              </form>
+            </div>
+          </div>
+        </div>
+      </nav>
+      <!--Main contents-->
+      <div>
+        <div class="parallax">
+          <div class="row">
+            <div class="overlay-text">
+              <h1 class="overlay-text-margin">Software fueling digital marketing</h1>
+            </div>
+            <div class="overlay-text ">
+              <button class="btn buttons">Learn more</button>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div>
       </div>
     </main>
 
