--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <!--Full page-->
     <main>
       <!--Head of the page-->
-      <div class="dropdown beginning">
+      <div class="dropdown beginning text-sm-center text-md-end pr-sm-0">
         <a class="link" href="#">News</a>
         <a class="link" href="#">Intranet</a>
         <button
@@ -144,29 +144,32 @@
 
       <!--Icons and digits-->
       <div class="row mt-5 icons">
+        <!--Icon 1-->
         <div class="col-sm-12 col-lg text-md-center pt-md-2">
           <div class=" d-inline-block">
             <i class="fas fa-briefcase icon mb-2"></i>
             <div class="d-inline-block">
-              <span class="h1" id="n1">3000</span> <br>
+              <span class="h1 value">3000</span> <br>
               <span class="h6">Clients</span> 
             </div>
           </div>
         </div>
+        <!--Icon 2-->
         <div class="col-sm-12 col-lg text-md-center pt-md-2">
           <div class=" d-inline-block">
             <i class="fas fa-id-badge icon mb-2"></i>
             <div class="d-inline-block">
-              <span class="h1" id="n2">180</span> <br>
+              <span class="h1 value">180</span> <br>
               <span class="h6">Employees</span> 
             </div>
           </div>
         </div>
+        <!--Icon 3-->
         <div class="col-sm-12 col-lg text-md-center pt-md-2">
           <div class=" d-inline-block">
             <i class="fas fa-globe icon mb-2"></i>
             <div class="d-inline-block">
-              <span class="h1" id="n3">10000</span> <br>
+              <span class="h1 value">10000</span> <br>
               <span class="h6">Daily users</span> 
             </div>
           </div>
@@ -240,10 +243,10 @@
       <footer class="mid">
         <div class="row">
           <div class="col-12 row">
-            <div class="col-6 text-start">
+            <div class="col text-lg-start text-md-center">
               <p class="link font-weight-bold">Liana Technologies</p>
             </div>
-            <div class="col-6 text-end">
+            <div class="col text-lg-end text-md-center">
               <a class="link" href="#">Company</a>
               <a class="link" href="#">Products</a>
               <a class="link" href="#">Contact us</a>
@@ -252,7 +255,7 @@
             </div>
           </div>
           <div class="col-12 row bottom">
-            <div class="col-6 row text-start">
+            <div class="col-6 row text-lg-start text-md-center">
               <div class="col">
                 <p><span class="font-weight-bold">Sales and inquiries</span><br>
                   Email: sales@lianatech.com <br> 
@@ -263,7 +266,7 @@
                 <button class="btn buttons">Contact us</button>
               </div>
             </div>
-            <div class="col-6 text-end bottomButton">
+            <div class="col-6 text-lg-end text-md-center bottomButton">
               <a href="https://www.facebook.com/lianatech" target="_blank">
                 <span class="fa-stack">
                   <i class="fas fa-circle fa-stack-2x outer"></i>
